# alleycat

./: CMakeLists.txt  README.md  build.bat
src/: game.c  game.h  input.c  input.h  main.c  player.c  player.h  render.c  render.h  scene.c  scene.h  sound.c  sound.h  sprites.c  sprites.h
src/scenes/: alley.c  alley.h  birdcage.c  birdcage.h  cheese.c  cheese.h  fishbowl.c  fishbowl.h  kennel.c  kennel.h  love.c  love.h  milk.c  milk.h  title.c  title.h
